--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,5 @@ uuid = { version = "1.8.0", features = ["v4"] }
 strum = "0.26"
 strum_macros = "0.26"
 clipboard = "0.5.0"
+reqwest = {version = "0.12.12", features = ["blocking"]}
+scraper = "0.22.0"
