--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ strum_macros = "0.26"
 clipboard = "0.5.0"
 reqwest = {version = "0.12.12", features = ["blocking"]}
 scraper = "0.22.0"
+regex = "1.11.1"
